--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title_separator          : "-"
 name                     : "Women for Women"
 description              : "Helping Make Reproductive Rights a Reality for Wyoming Women"
 url                      : "https://www.wyomingw4w.org"
-baseurl                  : "/"
+baseurl                  : # "/"
 repository               : "wyomingw4w/wyomingw4w.org"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : false
@@ -247,8 +247,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: # true
+      read_time: false
+      comments: false
       share: true
       related: true
 
