--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ naver_site_verification  :
 twitter:
   username               :
 facebook:
-  username               :
+  username               : wyomingwomenforwomen
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
