Author and sidebar tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -53,10 +53,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Women for Women"
+  name             : "Wyoming W4W"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "A 501(c)(3) non-profit organization established in 1998 by Wyoming women"
+  bio              : "Ensuring Wyoming women are able to access abortion services"
   location         : "PO Box 1472, Lander, WY 82520"
+  phone            : "307-438-9272"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
