Edited config to add test URL

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title                    : "Women for Women"
 title_separator          : "-"
 name                     : "Women for Women"
 description              : "Helping Make Reproductive Rights a Reality for Wyoming Women"
-url                      : "https://www.wyomingw4w.org"
+url                      : "https://test.wyomingw4w.org"
 baseurl                  : # "/"
 repository               : "wyomingw4w/wyomingw4w.org"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
