--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,5 @@ main:
     url: /faq/
   - title: "About Us"
     url: /about/
-  - title: "News"
-    url: /news/
+  - title: "Resources"
+    url: /resources/
