Switched config from test to www

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title                    : "Women for Women"
 title_separator          : "-"
 name                     : "Women for Women"
 description              : "Supporting Reproductive Rights for Wyoming Women"
-url                      : "https://test.wyomingw4w.org"
+url                      : "https://www.wyomingw4w.org"
 baseurl                  : # "/"
 repository               : "wyomingw4w/wyomingw4w.org"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
