--- a/_data/providers.yml
+++ b/_data/providers.yml
@@ -16,9 +16,9 @@ Emerg-A-Care:
   url: "http://emergacare.com/"
   phone: "307-733-8002"
   medical: "Up to 10 weeks after last period"  
-  medical_cost: "$750"
+  medical_cost: "$750. If RH negative, add $90."
   surgical: "5 to 12 weeks after last period"  
-  surgical_cost: "$950"
+  surgical_cost: "$1099"
 
 Planned Parenthood FtCo:
   name: "Planned Parenthood, Ft. Collins"
@@ -28,9 +28,9 @@ Planned Parenthood FtCo:
   url: "https://www.plannedparenthood.org/health-center/colorado/fort-collins/80521/fort-collins-4087-90210"
   phone: "970-493-0281"
   medical: "Up to 10 weeks after last period"  
-  medical_cost: "$465 to $525"
-  surgical: "5 to 18 weeks after last period"  
-  surgical_cost: "$515 to $1075"
+  medical_cost: "$490 to $540"
+  surgical: "5 to 19.6 weeks after last period"  
+  surgical_cost: "$490 to $1363"
 
 Healthy Futures For Women:
   name: "Healthy Futures For Women"
@@ -40,11 +40,11 @@ Healthy Futures For Women:
   url: "http://www.healthyfuturesforwomen.com/"
   phone: "303-991-7700"
   medical: "Up to 10 weeks after last period"  
-  medical_cost: "$390 to $450"
+  medical_cost: "$440"
   surgical: "5 to 20 weeks after last period"  
-  surgical_cost: "$375 to $2300"
+  surgical_cost: "$440 to $2500"
 
-Planned Parenthood Stapelton:
+Planned Parenthood Stapleton:
   name: "Planned Parenthood, Stapleton"
   note:
   state: "CO"
@@ -52,9 +52,9 @@ Planned Parenthood Stapelton:
   url: "https://www.plannedparenthood.org/health-center/colorado/denver/80207/denver-stapleton-3543-90210"
   phone: "303-321-2458"
   medical: "Up to 10 weeks after last period"
-  medical_cost: "$465 to $525"
-  surgical: "5 to 20 weeks after last period"  
-  surgical_cost: "$515 to $1215"
+  medical_cost: "$490 to $540"
+  surgical: "5 to 19 weeks after last period"  
+  surgical_cost: "$490 to $1363"
 
 Planned Parenthood Steamboat:
   name: "Planned Parenthood, Steamboat:"
@@ -64,7 +64,7 @@ Planned Parenthood Steamboat:
   url: "https://www.plannedparenthood.org/health-center/colorado/steamboat-springs/80487/steamboat-springs-2168-90210"
   phone: "970-879-2212"
   medical: "Up to 9 weeks after last period"
-  medical_cost: "$465"
+  medical_cost: "$490 to $540"
 
 Boulder Valley Health Center:
   name: "Boulder Valley Women's Health Center"
@@ -74,9 +74,9 @@ Boulder Valley Health Center:
   url: "http://www.boulderwomenshealth.org/"
   phone: "303-416-4112"
   medical: "Up to 10 weeks after last period"  
-  medical_cost: "$450"
+  medical_cost: "$500"
   surgical: "5 to 14 weeks after last period"  
-  surgical_cost: "$550"
+  surgical_cost: "$500 to $600"
 
 Comprehensive Womens Health Center:
   name: "Comprehensive Women’s Health Center"
@@ -85,14 +85,15 @@ Comprehensive Womens Health Center:
   address: "8111 E Lowery Blvd, Suite 250, Denver, CO"
   url: "https://cwhccolorado.com/"
   phone: "720-810-5442"
-  medical: "Up to 9 weeks after last period"  
+  medical: "Up to 10 weeks after last period"  
   medical_cost: "$450"
   surgical: "6 to 21 weeks after last period"  
-  surgical_cost: "$322 to $2150"
+  surgical_cost: "$350 to $2150"
 
 Boulder Abortion Clinic:
   name: "Boulder Abortion Clinic"
-  note: "This provider specializes in late-term abortions. Earlier-term
+  note: "This clinic is one of the few in the nation to offer 
+         late-term abortions. Earlier-term
          abortions are generally less expensive at other clinics."
   state: "CO"
   address: "1130 Alpine Avenue, Boulder, CO"
@@ -109,15 +110,14 @@ Planned Parenthood Billings:
   url: "https://www.plannedparenthood.org/health-center/montana/billings/59105/planned-parenthood-heights-2438-90790"
   phone: "406-869-5040"
   medical: "Up to 9 weeks after last period"  
-  medical_cost: "$799"
-  surgical: "5 to 21 weeks after last period"  
-  surgical_cost: "$1200 to $1400"
+  medical_cost: "$710. If RH negative, add $89."
+  surgical: "5 to 21.6 weeks after last period"  
+  surgical_cost: "$1134 to $1690. Add $125 for sedation."
 
 Blue Mountain Clinic:
   name: "Blue Mountain Clinic"
-  note: "Mainly an option for early second trimester abortions for
-         Teton County area women wishing to avoid the two-trip issue of going
-         to a Salt Lake City, UT provider."
+  note: "Listed here as a possible option for early second trimester abortions for
+         Teton County area residents "
   state: "MT"
   address: "610 N. California, Missoula, MT"
   url: "http://www.bluemountainclinic.org/"
@@ -129,7 +129,7 @@ Blue Mountain Clinic:
 
 Planned Parenthood Salt Lake:
   name: "Planned Parenthood, Salt Lake City"
-  note:
+  note: "Telehealth/phone consult may be available for the state-mandated 72 hr consult."
   state: "UT"
   address: "160 South 1000 East, Suite 120, Salt Lake City, UT"
   url: "https://www.plannedparenthood.org/health-center/utah/salt-lake-city/84102/metro-health-center-3958-91730"
@@ -148,7 +148,7 @@ Wasatch Womens Center:
   phone: "801-263-2111"
   medical: "Up to 9 weeks after last period"  
   medical_cost: "$450"
-  surgical: "6 to 14 weeks after last period"  
+  surgical: "6 to 13.5 weeks after last period"  
   surgical_cost: "$450 to $550"
 
 Planned Parenthood Twin Falls:
